# WindowSpeedupTool

./: .flake8  .gitignore  CONTRIBUTING.md  INSTALL-DRIVERS.bat  README.md  _patch_qtcore.pyi.py  build-instructions.md  build.py  config.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.iss  windowspeeduptool.py
.github/: pull_request_template.md
advanceoptions/: __init__.py  advanceoptions.py  loading_widget.py  packages_uninstall.py  packages_view.py
config/: account_services.json  advance_services.json  advancex_services.json  device_services.json  event_services.json  extra_services.json  hidden_services.json  laptop_services.json  necessary_services.json  network_services.json  normal_services.json  normal_specific_services.json  security_services.json  tracking_services.json  unstoppable_services.json  update_services.json  user_services.json  wlan_services.json
driversbackup/: border_widget.py  drivers_backup.py  drivers_view.py  error_view.py  loading_widget.py
poweroptions/: __init__.py  plan_settings.py  power_options.py  power_throttling.py
source/: main.py
src/: overlay.py  process_terminal.py
styles/: __init__.py  cleaner.qss  drivers.qss  loading.qss  overlay.qss  plansettings.qss  power.qss  services.qss  sidebar.qss  specificservices.qss  sysinfo.qss  windowsupdate.qss
systemcleaner/: __init__.py  clean.py  cleanup_view.py  system_cleaner.py
systeminfo/: __init__.py  sysinfo.py  system_info.py
systemrepair/: system_repair.py
test-components/: confirm_action.py  drivers_backup.py  normal_specific_services.py  (+9 more)
(+91 files in other folders)
