[project]
name = "WindowSpeedupTool"
requires-python = ">=3.12"

[tool.isort]
profile = "appnexus"
src_paths = ["source", "test"]

[tool.pyright]
exclude = [
    "**/build",
    "**/__pycache__",
    "**/__init__.py",
    "**/test-widgets"
]
typeCheckingMode = "strict"
reportImportCycles = true
reportShadowedImports = true
reportUnusedImport = "information"
reportImplicitOverride = "information"
reportImplicitStringConcatenation = "information"
